[package]
name = "cutting_optimizer"
version = "1.0.0"
edition = "2021"
authors = ["Marcin Bielak <marcin.bieli+cuttingoptimizergithub@gmail.com>"]
description = "Rod cutting optimizer with DP-based cut ordering and storage-aware cutting strategy."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
